--- a/css/onepage-scroll.css
+++ b/css/onepage-scroll.css
@@ -51,8 +51,8 @@ body, .onepage-wrapper, html {
 .onepage-pagination li a:before{
   content: '';
   position: absolute;
-  width: 6px;
-  height: 6px;
+  width: 4px;
+  height: 4px;
   background: rgba(0,0,0,0.85);
   border-radius: 10px;
   -webkit-border-radius: 10px;
@@ -63,7 +63,7 @@ body, .onepage-wrapper, html {
   width: 10px;
   height: 10px;
   background: none;
-  border: 1px solid #333;
+  border: 1px solid black;
   margin-top: -4px;
   left: 8px;
 }
