--- a/css/style.default.css
+++ b/css/style.default.css
@@ -37,6 +37,18 @@ section.background-gray-lightest {
   border-top: solid 1px #eeeeee;
   border-bottom: solid 1px #eeeeee;
 }
+.icon{
+position: absolute;
+  bottom: 40px;
+  left: 50%;
+  margin-left: -20px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border: solid 2px #fff;
+  border-radius: 20px;
+  z-index: 3;
+}
 #page3{
   margin-top: 25%;
 }
