--- a/css/style.default.css
+++ b/css/style.default.css
@@ -1,10 +1,10 @@
-/* 
-========================================= 
-========================================= 
+/*
+=========================================
+=========================================
 
-Designer Template By Bootstrapious.com 
+Designer Template By Bootstrapious.com
 
-========================================= 
+=========================================
 ========================================= */
 /* variant 5 - blue */
 /*
@@ -83,6 +83,8 @@ position: absolute;
 }
 .img-responsive {
   margin: 0 auto;
+  height: 60%;
+  width: 60%;
 }
 .no-space .box {
   margin: 0 -15px;
