--- a/css/style.default.css
+++ b/css/style.default.css
@@ -81,10 +81,14 @@ position: absolute;
     font-size: 60px;
   }
 }
+
+.img-circle {
+ height: 55%;
+ width: 55%;
+}
+
 .img-responsive {
   margin: 0 auto;
-  height: 55%;
-  width: 55%;
 }
 .no-space .box {
   margin: 0 -15px;
